sslweb/sslweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssltest
  labels:
    app: ssltest
spec:
  selector:
    app: ssltest
  ports:
  - port: 80
    name: http
    targetPort: 80
