sslweb/sslweb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ssltest
spec:
  rules:
  - host: ssltest.cyberglitch.dev
    http:
      paths:
      - backend:
          serviceName: ssltest
          servicePort: 80
  tls:
  - hosts:
    - ssltest.cyberglitch.dev
    secretName: ssltest-cert
